--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/sign-in.html"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
